[package]
name = "rust-apns-core"
version = "0.8.0"
authors = [
  "Matt Jarjoura <jarjoura@outlook.com>",
  "Harry Bairstow <harry@walletconnect.com>",
  "Julius de Bruijn <julius@nauk.io>",
  "Sergey Tkachenko <seriy.tkachenko@gmail.com>",
]
license = "MIT"
readme  = "README.md"
description = "A native, asynchronous Apple push notification client"
keywords    = ["apns", "apple", "push", "async", "http2"]
repository  = "https://github.com/eklipse2k8/rust-apns.git"
homepage    = "https://github.com/eklipse2k8/rust-apns"
documentation = "https://docs.rs/rust-apns"
edition = "2021"

[features]
default = ["openssl"]
tracing = ["dep:tracing"]
ring = ["dep:ring", "pem"]
deadpool = ["dep:deadpool"]

[dependencies]
async-trait = {version = "0" }
base64 = "0"
deadpool = {version = "0", optional = true}
derive_builder = {version = "0" }
erased-serde = "0"
http = "0"
hyper = { version = "0", default-features = false, features = ["client", "http2"] }
hyper-alpn = { git = "https://github.com/WalletConnect/hyper-alpn", ref = "0030fd0" }
openssl = { version = "0", optional = true }
pem = { version = "1", optional = true }
ring = { version = "0", features = ["std"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_plain = "1.0.1"
serde_repr = "0.1.10"
thiserror = "1"
tracing = { version = "0", optional = true }

[dev-dependencies]
argparse = "0"
tracing-subscriber = "0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
hyper = { version = "0", features = ["client", "http2", "tcp"] }
